# Legacy

Back-end/Flask/: config.py  run.py
Back-end/Flask/app/: __init__.py  models.py
Back-end/LoginAuthorization/: Dockerfile.example  README.md  settings.gradle
Back-end/LoginAuthorization/app/: build.gradle
Back-end/LoginAuthorization/authentication-service/: README.md  build.gradle
Back-end/RESTful API/DRF/: README.md
Back-end/RESTful API/SpringBoot/: build.gradle
Back-end/RESTful_API/DRF/: README.md  pyproject.toml
Back-end/RESTful_API/DRF/legacy/legacy/: asgi.py  settings.py  urls.py  wsgi.py
Back-end/RESTful_API/DRF/legacy/myapp/: models.py  urls.py  views.py
Back-end/RESTful_API/DRF/legacy/myapp/migrations/: 0001_initial.py
Back-end/RESTful_API/Express/: README.md  app.js  package-lock.json
Back-end/RESTful_API/Flask/: README.md  config.py  pyproject.toml
Back-end/RESTful_API/Flask/app/: __init__.py  models.py  routes.py
Back-end/RESTful_API/SpringBoot/: settings.gradle
Back-end/RESTful_API/dotNET/: README.md  Startup.cs  project.csproj
Back-end/RESTful_API/fastAPI/: README.md  pyproject.toml
Back-end/RESTful_API/fastAPI/app/: controller.py  main.py  routes.py
Back-end/SpringBoot/: README.md
Back-end/dotNET/: Program.cs  README.md  Startup.cs  appsettings.json  proejct-name.csproj  project.csproj
Back-end/dotNET/Controllers/: WeatherForecastController.cs
Back-end/dotNET/Hubs/: SignalRHub.cs
Back-end/dotNET/Models/: Object.cs
Front-end/Next.js/: README.md
Front-end/React.js/: README.md
(+37 files in other folders)
