[tool.poetry]
name = "djangoapp"
version = "0.1.0"
description = "Django Application Legacy"
authors = ["yun9yu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
