[tool.poetry]
name = "my-flask-project"
version = "0.1.0"
description = ""
authors = ["choiyun9yu <sw22tapple@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
