[tool.poetry]
name = "fastapilegacy"
version = "0.1.0"
description = "fastAPI Legacy"
authors = ["yun9yu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
